--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
-h1{
-    color: teal
+.resume-page{
+    display: flex;
+    flex-direction: column;
+  padding: 3px;
+  gap:5px;
+  height: 96vh;
+  width: 98vw;
+  background: black;
+}
+.resume-body{
+    display: flex;
+    gap: 10px;
+    height: 100%;
+}
+.details{
+    width: 69%;
+}
+
+.flex-row{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    gap:5px;
+}
+.hover-pointer{
+    :hover{
+        cursor: pointer;
+        background-color: white;
+        border-radius: 10px;
+    }
 }
